--- a/same_scale_finder/index.html
+++ b/same_scale_finder/index.html
@@ -13,19 +13,19 @@
   <hr>
 
   <div id="map1" style="width:45%; height: 45vh; float: left; border: 1px;" ></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map2" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map3" style="width:45%; height: 45vh; float: left; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map4" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
 </body>
