--- a/same_scale_finder/test.html
+++ b/same_scale_finder/test.html
@@ -282,7 +282,7 @@ var park = [     // 행원파크로 가는 길목 좌표
      }   
    </script>
    <script async defer
-   src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap"> //내 구글 api 키 설정
+   src="https://maps.googleapis.com/maps/api/js?key='api키위치'&callback=initMap"> //내 구글 api 키 설정
    </script>
  </body>
 </html>
