--- a/same_scale_finder/index.html
+++ b/same_scale_finder/index.html
@@ -1,31 +1,28 @@
 <!DOCTYPE html>
 <html>
-
 <head>
   <meta charset="utf-8">
   <title>Google Maps in Same Scale</title>
 </head>
-
 <body>
-  <button type="button" id="button1">스케일 리셋하기</button>
-  <br>
-  <br>
-  <hr>
+  <input type="text" id="input">
+  <button type="button" onclick="input()" id="button1">스케일 리셋하기</button>
+  <br><br><hr>
 
   <div id="map1" style="width:45%; height: 45vh; float: left; border: 1px;" ></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map2" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map3" style="width:45%; height: 45vh; float: left; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
   <div id="map4" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='API키 자리입니다 따옴표까지 지워주세요'&callback=initMap&region=kr"></script>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
   <script src="./script.js"></script>
 
 </body>
