--- a/same_scale_finder/index.html
+++ b/same_scale_finder/index.html
@@ -3,27 +3,25 @@
 <head>
   <meta charset="utf-8">
   <title>Google Maps in Same Scale</title>
+  <script src="./script.js"></script>
 </head>
 <body>
-  <input type="text" id="input">
-  <button type="button" onclick="input()" id="button1">스케일 리셋하기</button>
+  <input type="number" id="input">
+  <button type="button" onclick="scaleReset()" id="button1">스케일 리셋하기</button>
+  약 10에서 20이 권장입니다.
   <br><br><hr>
 
-  <div id="map1" style="width:45%; height: 45vh; float: left; border: 1px;" ></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
-  <script src="./script.js"></script>
+  <div id="map1" style="width:50%; height: 50vh; float: left; border: 1px;" ></div>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
 
-  <div id="map2" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
-  <script src="./script.js"></script>
+  <div id="map2" style="width:50%; height: 50vh; float: right; border: 1px;"></div>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
 
-  <div id="map3" style="width:45%; height: 45vh; float: left; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
-  <script src="./script.js"></script>
+  <div id="map3" style="width:50%; height: 50vh; float: left; border: 1px;"></div>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
 
-  <div id="map4" style="width:45%; height: 45vh; float: right; border: 1px;"></div>
-  <script async defer src="https://maps.googleapis.com/maps/api/js?key='구글맵 API 키를 넣어주십시오 따옴표도 지워주세요'&callback=initMap&region=kr"></script>
-  <script src="./script.js"></script>
+  <div id="map4" style="width:50%; height: 50vh; float: right; border: 1px;"></div>
+  <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
 
 </body>
 </html>
