--- a/same_scale_finder/index.html
+++ b/same_scale_finder/index.html
@@ -76,19 +76,19 @@
 
   <div id="map1" style="width:50%; height: 45vh; float: left; border: 1px;"></div>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEY자리입니다&callback=initMap&region=kr"></script>
 
   <div id="map2" style="width:50%; height: 45vh; float: right; border: 1px;"></div>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEY자리입니다&callback=initMap&region=kr"></script>
 
   <div id="map3" style="width:50%; height: 45vh; float: left; border: 1px;"></div>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEY자리입니다&callback=initMap&region=kr"></script>
 
   <div id="map4" style="width:50%; height: 45vh; float: right; border: 1px;"></div>
   <script async defer
-    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyB2Kw4tAxJcTljgHshXI59tCd80WZ2iz-c&callback=initMap&region=kr"></script>
+    src="https://maps.googleapis.com/maps/api/js?key=APIKEY자리입니다&callback=initMap&region=kr"></script>
 
 </body>
 
