--- a/ref/ThreeGeoJSON-master/index.html
+++ b/ref/ThreeGeoJSON-master/index.html
@@ -51,6 +51,9 @@
             //     }, planet);
             // });
 
+            //npm install @observablehq/runtime@4
+            // npm install https://api.observablehq.com/@d3/versor-dragging.tgz?v=3
+
             $.getJSON("../../src/assets/json/seoulGeo/AL_11_D162_20200917_test.json", function(data) {
                 drawThreeGeo(data, 10, 'sphere', {
                     color: 0x8080FF
